# BookReader

./: CMakeLists.txt
main_app/: app.c  main.c  main_win.c  main_win.h
resources/glade_cascades/: main.glade
